# MovieChecker

./: README.md
Backend_MovieLLM/: Dockerfile  main.py  pyproject.toml
movieapi/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
movieapi/src/: App.css  App.jsx
